fixed word spacing

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ html {
 }
 
 .spacer {
-  margin-top: 20rem;
+  margin-top: 18rem;
   margin-bottom: 10rem;
 }
 
@@ -260,6 +260,10 @@ hr.footer {
     display: none;
   }
 
+  .home > div {
+    padding-top: 8vh !important;
+  }
+
   .home::before {
     height: 85%;
     width: 96.5%;
@@ -267,7 +271,7 @@ hr.footer {
   }
 
   .spacer {
-    margin-top: 4rem;
+    margin-top: 6rem;
     margin-bottom: 5rem;
   }
 }
